--- a/TeacherApp/templates/addstudent.html
+++ b/TeacherApp/templates/addstudent.html
@@ -67,6 +67,11 @@
                     </div>
 
                     <div class="mb-3">
+                        <label class="form-label">Email Id</label>
+                        <input type="email"  placeholder="Email Id" name="student_email" class="form-control">
+                    </div>
+
+                    <div class="mb-3">
                         <label class="form-label">Password</label>
                         <input type="text" placeholder="Password" name="student_password" class="form-control">
                     </div>
