--- a/TeacherApp/templates/editstudent.html
+++ b/TeacherApp/templates/editstudent.html
@@ -71,6 +71,11 @@
                     </div>
 
                     <div class="mb-3">
+                        <label class="form-label">Email Id</label>
+                        <input type="email"  placeholder="Email Id" name="student_email" class="form-control" value="{{student.Student_email}}">
+                    </div>
+
+                    <div class="mb-3">
                         <label class="form-label">Password</label>
                         <input type="text" placeholder="Password" name="student_password" class="form-control"
                                value="{{student.Student_password}}">
