--- a/StudentApp/templates/base.html
+++ b/StudentApp/templates/base.html
@@ -101,7 +101,7 @@
             <div class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown">
                     <span class="user-icon">👤</span>
-                    <span class="user-name">Student</span>
+                    <span class="user-name">{{student.Student_name}}</span>
                 </a>
                 <div class="dropdown-menu dropdown-menu-right dropdown-menu-icon-list">
                     <a class="dropdown-item"><i class="dw dw-user1"></i> Profile</a>
@@ -155,7 +155,7 @@
 
                 <!-- PHOTO -->
                 <div class="col-md-4 text-center">
-                    <img src="{% static 'Studentside/vendors/images/student.png' %}" class="rounded-circle mb-3"
+                    <img src="{{student.Student_prof.url}}" class="rounded-circle mb-3"
                          style="width:150px; border:5px solid #1b5cff;">
                     <h3 style="font-weight:700;">{{student.Student_name}}</h3>
                     <p><b>Reg No:</b>{{student.Student_regid}}</p>
@@ -184,28 +184,28 @@
             <div class="col-md-3">
                 <div class="card-box" style="background:#e8f0ff; border-radius:15px; padding:20px; text-align:center;">
                     <h5 style="color:#1b5cff; font-weight:700;">Email</h5>
-                    <p>{{student}}</p>
+                    <p>{{student.Student_email}}</p>
                 </div>
             </div>
 
             <div class="col-md-3">
                 <div class="card-box" style="background:#fff3d6; border-radius:15px; padding:20px; text-align:center;">
                     <h5 style="color:#ff9900; font-weight:700;">Phone</h5>
-                    <p>9876543210</p>
+                    <p>{{student.Student_phone}}</p>
                 </div>
             </div>
 
             <div class="col-md-3">
                 <div class="card-box" style="background:#eaffea; border-radius:15px; padding:20px; text-align:center;">
                     <h5 style="color:#23a832; font-weight:700;">Department</h5>
-                    <p>Computer Science</p>
+                    <p>{{student.Student_batch}}</p>
                 </div>
             </div>
 
             <div class="col-md-3">
                 <div class="card-box" style="background:#fde7ec; border-radius:15px; padding:20px; text-align:center;">
                     <h5 style="color:#e63950; font-weight:700;">Advisor</h5>
-                    <p>Class Advisor</p>
+                    <p>Jiya Rev</p>
                 </div>
             </div>
 
