commit 68 (data fetched for base.html using id )

--- a/StudentApp/templates/base.html
+++ b/StudentApp/templates/base.html
@@ -128,7 +128,7 @@
                 <li><a class="dropdown-toggle no-arrow"><span class="micon dw dw-analytics-21"></span><span class="mtext">Attendance</span></a></li>
                 <li><a class="dropdown-toggle no-arrow"><span class="micon dw dw-edit2"></span><span class="mtext">Internals</span></a></li>
                 <li><a class="dropdown-toggle no-arrow"><span class="micon dw dw-chat3"></span><span class="mtext">Messenger</span></a></li>
-                <li><a class="dropdown-toggle no-arrow"><span class="micon dw dw-logout"></span><span class="mtext">Logout</span></a></li>
+                <li><a class="dropdown-toggle no-arrow" href="{% url 'StudentLogout' %}"><span class="micon dw dw-logout"></span><span class="mtext">Logout</span></a></li>
             </ul>
         </div>
     </div>
