--- a/StudentApp/templates/StudentReport.html
+++ b/StudentApp/templates/StudentReport.html
@@ -2,6 +2,23 @@
 {% load static %}
 {% block content %}
 <div class="container">
-    <h1>report page</h1>
+    <div>
+        <table class="table table-bordered table-hover">
+            <thead>
+            <tr class="text-center" style="background-color:lightgrey;" >
+                <th>Subject</th>
+                <th>Subject Code</th>
+                <th>Internal Mark</th>
+                <th>Total Internal</th>
+                <th>Attendance</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+
+            </tr>
+            </tbody>
+        </table>
+    </div>
 </div>
 {% endblock %}
