--- a/StudentApp/templates/base.html
+++ b/StudentApp/templates/base.html
@@ -126,7 +126,7 @@
             <ul id="accordion-menu">
                 <li><a class="dropdown-toggle no-arrow" href="{% url 'StudentHomePage' %}"><span class="micon dw dw-house-1"></span><span class="mtext">Dashboard</span></a></li>
                 <li><a class="dropdown-toggle no-arrow"><span class="micon dw dw-analytics-21"></span><span class="mtext">Attendance</span></a></li>
-                <li><a class="dropdown-toggle no-arrow"><span class="micon dw dw-edit2"></span><span class="mtext">Internals</span></a></li>
+                <li><a class="dropdown-toggle no-arrow" href="{% url 'StudentReportPage' %}"><span class="micon dw dw-edit2"></span><span class="mtext">Internals</span></a></li>
                 <li><a class="dropdown-toggle no-arrow"><span class="micon dw dw-chat3"></span><span class="mtext">Messenger</span></a></li>
                 <li><a class="dropdown-toggle no-arrow" href="{% url 'StudentLogout' %}"><span class="micon dw dw-logout"></span><span class="mtext">Logout</span></a></li>
             </ul>
