--- a/StudentApp/templates/StudentReport.html
+++ b/StudentApp/templates/StudentReport.html
@@ -14,9 +14,11 @@
             </tr>
             </thead>
             <tbody>
-            <tr>
+            {% dor i in internal %}
+            <tr class="text-center">
 
             </tr>
+            {% endfor %}
             </tbody>
         </table>
     </div>
