commit 79(student report views onprogress)

--- a/StudentApp/templates/StudentReport.html
+++ b/StudentApp/templates/StudentReport.html
@@ -14,7 +14,7 @@
             </tr>
             </thead>
             <tbody>
-            {% dor i in internal %}
+            {% for i in internal %}
             <tr class="text-center">
 
             </tr>
