--- a/StudentApp/templates/StudentReport.html
+++ b/StudentApp/templates/StudentReport.html
@@ -16,7 +16,7 @@
             <tbody>
             {% for i in internal %}
             <tr class="text-center">
-                <td>{{i.Subject.Subject_name}}</td>
+                <td style="text-align:justify;">{{i.Subject.Subject_name}}</td>
                 <td>{{i.Subject.Subject_code}}</td>
                 <td>{{i.Internalmark}}</td>
                 <td>{{i.Totalmark}}</td>
