--- a/StudentApp/templates/StudentReport.html
+++ b/StudentApp/templates/StudentReport.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-<div class="container">
+<div class="container" style="width:100%; height:100%;">
     <div>
         <table class="table table-bordered table-hover">
             <thead>
