commit 86(footer in base.html trying to fix)

--- a/StudentApp/templates/StudentReport.html
+++ b/StudentApp/templates/StudentReport.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-<div class="container"">
+<div class="container" style="padding:50px;">
     <div>
         <table class="table table-bordered table-hover">
             <thead>
