--- a/StudentApp/templates/base.html
+++ b/StudentApp/templates/base.html
@@ -167,7 +167,7 @@
                         <span class="micon"><i class="fa-solid fa-house"></i></span>
                         <span class="mtext">Dashboard</span></a></li>
 
-                    <li><a class="dropdown-toggle no-arrow">
+                    <li><a class="dropdown-toggle no-arrow" href="{% url 'StudentAttendanceDisplayPage' %}">
                         <span class="micon"><i class="fa-solid fa-chart-line"></i></span>
                         <span class="mtext">Attendance</span></a></li>
 
@@ -305,10 +305,8 @@
         }, 700);
     });
 </script>
-
 <!-- jQuery -->
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
 <!-- Bootstrap JS (Dropdown Working) -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
