--- a/StudentApp/templates/base.html
+++ b/StudentApp/templates/base.html
@@ -381,27 +381,33 @@
                 <div class="row mt-4 mb-5">
 
                     <div class="col-xl-4 mb-30" style="gap:30px;">
+                        <a href="{% url 'StudentAttendanceDisplayPage' %}">
                         <div class="quick-card"
                              style="background:linear-gradient(135deg,#66bb6a,#43a047); width:350px; height:150px; text-align:center; padding:30px 20px;border-radius:40px;">
                             <i class="fa-solid fa-chart-column" style="font-size:55px;"></i>
                             <h4>Attendance</h4>
                         </div>
+                            </a>
                     </div>
 
                     <div class="col-xl-4 mb-30">
+                        <a href="{% url 'StudentReportPage' %}">
                         <div class="quick-card"
                              style="background:linear-gradient(135deg,#ffa726,#fb8c00); width:350px; height:150px; text-align:center; padding:30px 20px; border-radius:40px;">
                             <i class="fa-solid fa-pen-to-square" style="font-size:55px;"></i>
                             <h4>Internal Marks</h4>
                         </div>
+                        </a>
                     </div>
 
                     <div class="col-xl-4 mb-30">
+                        <a href="{% url 'StudentAttendanceDisplayPage' %}">
                         <div class="quick-card"
                              style="background:linear-gradient(135deg,#42a5f5,#1e88e5); width:350px; height:150px; text-align:center; padding:30px 20px; border-radius:40px;">
                             <i class="fa-solid fa-comments" style="font-size:55px;"></i>
                             <h4>Chat</h4>
                         </div>
+                        </a>
                     </div>
 
                 </div>
